# vast4

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ad.rs  click.rs  companion_ad.rs  creative.rs  creative_resource.rs  duration.rs  error.rs  extension.rs  icon.rs  in_line.rs  lib.rs  linear.rs  macros.rs  media_file.rs  non_linear.rs  tracking.rs  vast.rs  verification.rs  viewable.rs  wrapper.rs
tests/: macros.rs  mod.rs
tests/checker/VastSchemaChecker/: Program.cs
tests/data/v4_2/: Ad_Verification-test.xml  Category-test.xml  Closed_Caption_Test.xml  Event_Tracking-test.xml  IconClickFallbacks.xml  Inline_Companion_Tag-test.xml  Inline_Linear_Tag-test.xml  Inline_Non-Linear_Tag-test.xml  Inline_Simple.xml  No_Wrapper_Tag-test.xml  Ready_to_serve_Media_Files_check-test.xml  Universal_Ad_ID-multi-test.xml  Video_Clicks_and_click_tracking-Inline-test.xml  Viewable_Impression-test.xml  Wrapper_Tag-test.xml
tests/v4_2/: ad_verification.rs  category.rs  closed_caption.rs  event_tracking.rs  icon_click_fallbacks.rs  inline_companion_tag.rs  inline_linear_tag.rs  inline_non_linear_tag.rs  inline_simple.rs  mod.rs  no_wrapper_tag.rs  ready_to_serve_media_files_check.rs  universal_ad_id_multi.rs  video_clicks_and_click_tracking_inline.rs  viewable_impression.rs  wrapper_tag.rs
